[package]
name = "hasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.5"
md2 = "0.10.2"
md4 = "0.10.2"
md-5 = "0.10.5"
sha1 = "0.10.5"
sha2 = "0.10.6"
blake2 = "0.10.5"
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
